// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> matches snapshot 1`] = `
<div>
  <section
    class="tabs css-3ghqkg-container"
    id="tab-1"
  >
    <div
      class="nav-wrapper"
    >
      <nav
        class="css-sxhcft-tabsHeader-tabsHeader"
        role="tablist"
      >
        <a
          aria-controls="content-0"
          class="tab-link selected css-xyfmbj-tabNavItem-tabNavItem"
          data-testid="my-tab-0-tab"
          href="#tab-0"
          id="my-tab-0"
          role="tab"
        >
          Tab 1
        </a>
        <a
          aria-controls="content-1"
          class="tab-link css-a3wd5z-tabNavItem-tabNavItem"
          data-testid="my-tab-1-tab"
          href="#tab-1"
          id="my-tab-1"
          role="tab"
        >
          Tab 2
        </a>
        <a
          aria-controls="content-2"
          class="tab-link css-a3wd5z-tabNavItem-tabNavItem"
          data-testid="my-tab-2-tab"
          href="#tab-2"
          id="my-tab-2"
          role="tab"
        >
          Tab 3
        </a>
      </nav>
    </div>
    <section
      aria-live="polite"
      id="content"
      role="region"
    >
      <article
        id="content-0"
        role="tabpanel"
      >
        Test tab 1
      </article>
    </section>
  </section>
</div>
`;

exports[`<Tabs/> matches snapshot with stickyHeader 1`] = `
<div>
  <section
    class="css-3ghqkg-container"
  >
    <div
      class="nav-wrapper"
    >
      <nav
        class="css-1yfjqbx-tabsHeader-tabsHeader"
        role="tablist"
      >
        <a
          aria-controls="content-0"
          class="tab-link selected css-xyfmbj-tabNavItem-tabNavItem"
          data-testid="my-tab-0-tab"
          href="#tab-0"
          id="my-tab-0"
          role="tab"
        >
          Tab 1
        </a>
        <a
          aria-controls="content-1"
          class="tab-link css-a3wd5z-tabNavItem-tabNavItem"
          data-testid="my-tab-1-tab"
          href="#tab-1"
          id="my-tab-1"
          role="tab"
        >
          Tab 2
        </a>
        <a
          aria-controls="content-2"
          class="tab-link css-a3wd5z-tabNavItem-tabNavItem"
          data-testid="my-tab-2-tab"
          href="#tab-2"
          id="my-tab-2"
          role="tab"
        >
          Tab 3
        </a>
      </nav>
    </div>
    <section
      aria-live="polite"
      id="content"
      role="region"
    >
      <article
        id="content-0"
        role="tabpanel"
      >
        Test tab 1
      </article>
    </section>
  </section>
</div>
`;
